Fixed dropdown alignment on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -372,7 +372,7 @@ details {
 }
 
 summary {
-  display: inline;
+  display: inline-flex;
   cursor: pointer;
 }
 .teaching {
